--- a/Juguetron/PlazaPatria/Cube.html
+++ b/Juguetron/PlazaPatria/Cube.html
@@ -993,7 +993,7 @@ var el = document.getElementById('i300');
 
 el.addEventListener('click', function(e){
     /*#i306.i307.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://www.facebook.com/sharer/sharer.php?u=https://goo.gl/maps/13SUckPnjfy'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://goo.gl/maps/13SUckPnjfy'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1111,7 +1111,7 @@ var el = document.getElementById('i316');
 
 el.addEventListener('click', function(e){
     /*#i322.i323.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://www.facebook.com/sharer/sharer.php?u=https://goo.gl/maps/13SUckPnjfy'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://goo.gl/maps/13SUckPnjfy'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
