--- a/Juguetron/PlazaPatria/Venetian.html
+++ b/Juguetron/PlazaPatria/Venetian.html
@@ -2441,7 +2441,7 @@ var el = document.getElementById('i68');
 
 el.addEventListener('click', function(e){
     /*#i87.i88.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://www.facebook.com/pg/Juguetron/posts/?ref=page_internal'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://goo.gl/maps/13SUckPnjfy'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
