--- a/Kidzania2/Cube2.html
+++ b/Kidzania2/Cube2.html
@@ -562,6 +562,8 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(0, 0) rotate(0deg);
         transform: translate(0, 0) translate(0, 0) rotate(0deg);
 }
+/*#/#*//*#i5.i366.text.css:text/base/css*/
+#i366 { position: absolute; white-space: pre-wrap; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 18px; color: #1d1d1d; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); }
 /*#/#*//*#i5.i58.image.css:image/base/css*/
 #i58 { opacity: 1; }
 /*#/#*//*#cube.css:cube/globalcss.1*/
@@ -716,8 +718,15 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(35px, 224px) rotate(0deg);
         transform: translate(0, 0) translate(35px, 224px) rotate(0deg);
 }
+/*#/#*//*#i366.i367.positioning.css:positioning/base/css.1*/
+#i366 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 291px; height: 51px;
+        -ms-transform: translate(-50%, -50%) translate(1px, 74px) rotate(0deg);
+        -webkit-transform: translate(-50%, -50%) translate(1px, 74px) rotate(0deg);
+        -moz-transform: translate(-50%, -50%) translate(1px, 74px) rotate(0deg);
+        transform: translate(-50%, -50%) translate(1px, 74px) rotate(0deg);
+}
 /*#/#*//*#i58.i59.positioning.css:positioning/base/css.1*/
-#i58 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 301px; height: 161px;
+#i58 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 300px; height: 250px;
         -ms-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
         -webkit-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
         -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
@@ -727,19 +736,19 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 #i360 { opacity: 1; }
 /*#/#*//*#i360.i361.positioning.css:positioning/base/css.2*/
 #i360 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 96px; height: 24px;
-        -ms-transform: translate(0, 0) translate(200px, 223px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(200px, 223px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(200px, 223px) rotate(0deg);
-        transform: translate(0, 0) translate(200px, 223px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(196px, 7px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(196px, 7px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(196px, 7px) rotate(0deg);
+        transform: translate(0, 0) translate(196px, 7px) rotate(0deg);
 }
-/*#/#*//*#i5.i366.text.css:text/base/css*/
-#i366 { position: absolute; white-space: pre-wrap; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 18px; color: #1d1d1d; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); }
-/*#/#*//*#i366.i367.positioning.css:positioning/base/css.1*/
-#i366 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 291px; height: 51px;
-        -ms-transform: translate(-50%, -50%) translate(1px, 74px) rotate(0deg);
-        -webkit-transform: translate(-50%, -50%) translate(1px, 74px) rotate(0deg);
-        -moz-transform: translate(-50%, -50%) translate(1px, 74px) rotate(0deg);
-        transform: translate(-50%, -50%) translate(1px, 74px) rotate(0deg);
+/*#/#*//*#i5.i368.image.css:image/base/css*/
+#i368 { opacity: 1; }
+/*#/#*//*#i368.i369.positioning.css:positioning/base/css.2*/
+#i368 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 136px; height: 38px;
+        -ms-transform: translate(0, 0) translate(10px, 211px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(10px, 211px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(10px, 211px) rotate(0deg);
+        transform: translate(0, 0) translate(10px, 211px) rotate(0deg);
 }
 /*#/#*//*#i5.i95.shape.css:shape/base/css*/
 #i95 { background-color: #dedede; opacity: 0.00;
@@ -752,33 +761,6 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -webkit-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
         -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
         transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-}
-/*#/#*//*#i5.i336.image.css:image/base/css*/
-#i336 { opacity: 1; }
-/*#/#*//*#i336.i337.positioning.css:positioning/base/css.2*/
-#i336 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 23px; height: 23px;
-        -ms-transform: translate(0, 0) translate(5px, 224px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(5px, 224px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(5px, 224px) rotate(0deg);
-        transform: translate(0, 0) translate(5px, 224px) rotate(0deg);
-}
-/*#/#*//*#i5.i344.image.css:image/base/css*/
-#i344 { opacity: 1; }
-/*#/#*//*#i344.i345.positioning.css:positioning/base/css.2*/
-#i344 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 21px; height: 21px;
-        -ms-transform: translate(0, 0) translate(35px, 224px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(35px, 224px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(35px, 224px) rotate(0deg);
-        transform: translate(0, 0) translate(35px, 224px) rotate(0deg);
-}
-/*#/#*//*#i5.i352.image.css:image/base/css*/
-#i352 { opacity: 1; }
-/*#/#*//*#i352.i353.positioning.css:positioning/base/css.2*/
-#i352 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 23px; height: 23px;
-        -ms-transform: translate(0, 0) translate(64px, 224px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(64px, 224px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(64px, 224px) rotate(0deg);
-        transform: translate(0, 0) translate(64px, 224px) rotate(0deg);
 }
 /*#/#*//*#i52.i53.actions-clicktag.css:actions-clicktag/base/css.1*/
 #i5 { cursor: pointer; }
@@ -899,20 +881,16 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <div id="i5" class="panel-content-holder">
     <!--#i5.i30.shape.html:shape/html-->
 <div id="i30"></div>
-<!--#/#--><!--#i5.i58.image.html:image/html-->
-<img id="i58" src="https://i.imgur.com/oY9HPez.png"/>
-<!--#/#--><!--#i5.i360.image.html:image/html-->
-<img id="i360" src="https://i.imgur.com/viwKtXK.png"/>
 <!--#/#--><!--#i5.i366.text.html:text/html-->
 <div id="i366">¡Vive increíbles aventuras en compañía de tu familia y amigos!</div>
+<!--#/#--><!--#i5.i58.image.html:image/html-->
+<img id="i58" src="https://i.imgur.com/ksCE7Cr.png"/>
+<!--#/#--><!--#i5.i360.image.html:image/html-->
+<img id="i360" src="https://i.imgur.com/viwKtXK.png"/>
+<!--#/#--><!--#i5.i368.image.html:image/html-->
+<img id="i368" src="https://i.imgur.com/JKbXZFK.png"/>
 <!--#/#--><!--#i5.i95.shape.html:shape/html-->
 <div id="i95"></div>
-<!--#/#--><!--#i5.i336.image.html:image/html-->
-<img id="i336" src="https://i.imgur.com/4PUASvc.png"/>
-<!--#/#--><!--#i5.i344.image.html:image/html-->
-<img id="i344" src="https://i.imgur.com/fPiqpnk.png"/>
-<!--#/#--><!--#i5.i352.image.html:image/html-->
-<img id="i352" src="https://i.imgur.com/ippkQEN.png"/>
 <!--#/#-->
 </div>
 <!--#/#--><!--#i2.i6.cube-panel.html:cube-panel/html-->
@@ -982,7 +960,7 @@ bmShow('i304');
 /* Name: On Click; */
 document.getElementById('i91').addEventListener('click', function(e){
     /*#i177.i178.actions-clicktag.js:actions-clicktag/base/js.1*/
-    window.mraid ? mraid.open(Adform.getClickURL('')) : window.open(dhtml.getVar('', ''), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://santafe.kidzania.com/es-mx/pages/noches-de-amigos'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 /*#/#*//*#i4.i312.image.js:image/base/js*/
@@ -995,7 +973,7 @@ var el = document.getElementById('i312');
 
 el.addEventListener('click', function(e){
     /*#i314.i315.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('')) : window.open(dhtml.getVar('', ''), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://www.facebook.com/sharer/sharer.php?u=https://santafe.kidzania.com/es-mx/pages/noches-de-amigos'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1012,7 +990,7 @@ var el = document.getElementById('i316');
 
 el.addEventListener('click', function(e){
     /*#i318.i319.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('')) : window.open(dhtml.getVar('', ''), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=¡Mira lo que he encontrado! https://santafe.kidzania.com/es-mx/pages/noches-de-amigos'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1029,7 +1007,7 @@ var el = document.getElementById('i328');
 
 el.addEventListener('click', function(e){
     /*#i330.i331.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('')) : window.open(dhtml.getVar('', ''), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'https://twitter.com/home?status=https://santafe.kidzania.com/es-mx/pages/noches-de-amigos'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1047,64 +1025,17 @@ if ('click' === 'click') {
 
 /*#/#*//*#i360.i361.positioning.js:positioning/base/js.2*/
 bmShow('i360');
+/*#/#*//*#i5.i368.image.js:image/base/js*/
+
+/*#/#*//*#i368.i369.positioning.js:positioning/base/js.2*/
+bmShow('i368');
 /*#/#*//*#i95.i175.actions.js:actions/base/js*/
 /* Name: On Click; */
 document.getElementById('i95').addEventListener('click', function(e){
     /*#i175.i176.actions-clicktag.js:actions-clicktag/base/js.1*/
-    window.mraid ? mraid.open(Adform.getClickURL('')) : window.open(dhtml.getVar('', ''), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG5')) : window.open(dhtml.getVar('clickTAG5', 'https://goo.gl/maps/YuR5tto2gkk'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
-/*#/#*//*#i5.i336.image.js:image/base/js*/
-
-/*#/#*//*#i336.i337.positioning.js:positioning/base/js.2*/
-bmShow('i336');
-/*#/#*//*#i336.i338.actions.js:actions/base/js.1*/
-/* Name: On Click; */
-var el = document.getElementById('i336');
-
-el.addEventListener('click', function(e){
-    /*#i338.i339.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', ''), dhtml.getVar('landingPageTarget', '_blank'));
-/*#/#*/
-});
-
-if ('click' === 'click') {
-    el.style.cursor = 'pointer';
-}
-/*#/#*//*#i5.i344.image.js:image/base/js*/
-
-/*#/#*//*#i344.i345.positioning.js:positioning/base/js.2*/
-bmShow('i344');
-/*#/#*//*#i344.i346.actions.js:actions/base/js.1*/
-/* Name: On Click; */
-var el = document.getElementById('i344');
-
-el.addEventListener('click', function(e){
-    /*#i346.i347.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', ''), dhtml.getVar('landingPageTarget', '_blank'));
-/*#/#*/
-});
-
-if ('click' === 'click') {
-    el.style.cursor = 'pointer';
-}
-/*#/#*//*#i5.i352.image.js:image/base/js*/
-
-/*#/#*//*#i352.i353.positioning.js:positioning/base/js.2*/
-bmShow('i352');
-/*#/#*//*#i352.i354.actions.js:actions/base/js.1*/
-/* Name: On Click; */
-var el = document.getElementById('i352');
-
-el.addEventListener('click', function(e){
-    /*#i354.i355.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', ''), dhtml.getVar('landingPageTarget', '_blank'));
-/*#/#*/
-});
-
-if ('click' === 'click') {
-    el.style.cursor = 'pointer';
-}
 /*#/#*//*#i5.i52.actions.js:actions/base/js*/
 /* Name: On Click; */
 
@@ -1116,7 +1047,7 @@ if ('click' === 'click') {
 /* Name: On Click; */
 document.getElementById('i99').addEventListener('click', function(e){
     /*#i179.i180.actions-clicktag.js:actions-clicktag/base/js.1*/
-    window.mraid ? mraid.open(Adform.getClickURL('')) : window.open(dhtml.getVar('', ''), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://santafe.kidzania.com/es-mx/pages/noches-de-amigos'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 /*#/#*//*#i6.i340.image.js:image/base/js*/
@@ -1129,7 +1060,7 @@ var el = document.getElementById('i340');
 
 el.addEventListener('click', function(e){
     /*#i342.i343.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', ''), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://www.facebook.com/sharer/sharer.php?u=https://santafe.kidzania.com/es-mx/pages/noches-de-amigos'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1146,7 +1077,7 @@ var el = document.getElementById('i348');
 
 el.addEventListener('click', function(e){
     /*#i350.i351.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', ''), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=¡Mira lo que he encontrado! https://santafe.kidzania.com/es-mx/pages/noches-de-amigos'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1163,7 +1094,7 @@ var el = document.getElementById('i356');
 
 el.addEventListener('click', function(e){
     /*#i358.i359.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', ''), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'https://twitter.com/home?status=https://santafe.kidzania.com/es-mx/pages/noches-de-amigos'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1249,6 +1180,10 @@ data: /*!*/{"keepAspectRatio":true}/*!*/;
 name: Background;
 /*#/#*//*#i30.i31.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
+/*#/#*//*#i5.i366.text.meta:text/meta*/
+name: Texto; customName: 1;
+/*#/#*//*#i366.i367.positioning.meta:positioning/meta.1*/
+data: /*!*/{}/*!*/;
 /*#/#*//*#i5.i58.image.meta:image/meta*/
 name: Imagen de Cuadro; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
@@ -1259,29 +1194,15 @@ name: viwKtXK.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
 /*#/#*//*#i360.i361.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
-/*#/#*//*#i5.i366.text.meta:text/meta*/
-name: Texto; customName: 1;
-/*#/#*//*#i366.i367.positioning.meta:positioning/meta.1*/
-data: /*!*/{}/*!*/;
+/*#/#*//*#i5.i368.image.meta:image/meta*/
+name: JKbXZFK.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+customName: false;
+/*#/#*//*#i368.i369.positioning.meta:positioning/meta.2*/
+data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i5.i95.shape.meta:shape/meta*/
 name: Link;
 /*#/#*//*#i95.i96.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
-/*#/#*//*#i5.i336.image.meta:image/meta*/
-name: 4PUASvc.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
-customName: false;
-/*#/#*//*#i336.i337.positioning.meta:positioning/meta.2*/
-data: /*!*/{"keepAspectRatio":true}/*!*/;
-/*#/#*//*#i5.i344.image.meta:image/meta*/
-name: fPiqpnk.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
-customName: false;
-/*#/#*//*#i344.i345.positioning.meta:positioning/meta.2*/
-data: /*!*/{"keepAspectRatio":true}/*!*/;
-/*#/#*//*#i5.i352.image.meta:image/meta*/
-name: ippkQEN.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
-customName: false;
-/*#/#*//*#i352.i353.positioning.meta:positioning/meta.2*/
-data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i2.i6.cube-panel.meta:cube-panel/meta*/
     name: Cube Panel 3;
 /*#/#*//*#i6.i40.shape.meta:shape/meta*/
