--- a/Kidzania2/ZoomExp300x600.html
+++ b/Kidzania2/ZoomExp300x600.html
@@ -166,10 +166,10 @@ a {text-decoration: none;}
 <div class="ism-slider" data-transition_type="zoom" data-play_type="loop" data-interval="3000" data-image_fx="zoompan" data-buttons="false" data-radios="false" id="my-slider" style="width: 300px; height: 430px; border-radius: none;">
   <ol>
     <li>
-      <img src="https://i.imgur.com/4rjKonR.jpg">
+      <img src="https://i.imgur.com/Ak8kBgF.png">
       
     <li>
-      <img src="https://i.imgur.com/fLuC9uy.jpg">
+      <img src="https://i.imgur.com/Ak8kBgF.png">
       
     <li>
       <img src="https://i.imgur.com/mcmflC1.jpg">
