--- a/Kidzania2/FadeBig.html
+++ b/Kidzania2/FadeBig.html
@@ -72,7 +72,7 @@
         }
 
         .bg.cover-3 {
-            background: url("https://i.imgur.com/Ak8kBgF.png");
+            background: url("https://i.imgur.com/cZnBCJA.png");
             background-size: cover;
             
         }
@@ -354,7 +354,7 @@
 
 <body class="tgx">
    
-   <a href= "https://hebbabies.com.mx/crecer-sano/ejercicios-de-estimulacion-temprana-para-bebes/" target="_blank">
+   <a href= "https://santafe.kidzania.com/es-mx/pages/noches-de-amigos" target="_blank">
    
     <div class="tgx_wrapper carousel-wrapper size_320x480" id="cta" onclick="openUrl();">
        
@@ -376,13 +376,13 @@
 
                 <div id="botones-para-compartir" style="display:inline;float:left;margin-left:4px; margin-top: 30px;">
                     <span>  
-                        <a class="shared" href="https://www.facebook.com/sharer/sharer.php?u=https://hebbabies.com.mx/crecer-sano/ejercicios-de-estimulacion-temprana-para-bebes/"  target="block">    
+                        <a class="shared" href="https://www.facebook.com/sharer/sharer.php?u=https://santafe.kidzania.com/es-mx/pages/noches-de-amigos"  target="block">    
                         <img alt="compartir en facebook" class="facebooki" height="23" src="https://i.imgur.com/4PUASvc.png" title="compartir en facebook" width="23" /></a>
 
-                            <a class="shared" href="whatsapp://send?text=¡Mira lo que he encontrado! https://hebbabies.com.mx/crecer-sano/ejercicios-de-estimulacion-temprana-para-bebes/" target="block">
+                            <a class="shared" href="whatsapp://send?text=¡Mira lo que he encontrado! https://santafe.kidzania.com/es-mx/pages/noches-de-amigos" target="block">
                             <img alt="compartir en whatsapp" class="googlei" height="22" src="https://i.imgur.com/fPiqpnk.png" title="compartir en whatsapp" width="22" /></a>
 
-                            <a class="shared" href="https://twitter.com/home?status=https://hebbabies.com.mx/crecer-sano/ejercicios-de-estimulacion-temprana-para-bebes/" target="block">
+                            <a class="shared" href="https://twitter.com/home?status=https://santafe.kidzania.com/es-mx/pages/noches-de-amigos" target="block">
                             <img alt="compartir en twitter" class="twitteri" height="23" src="https://i.imgur.com/ippkQEN.png" title="compartir en twitter" width="23" /></a>
                     </span>
                 </div>
