--- a/Kidzania2/Cube.html
+++ b/Kidzania2/Cube.html
@@ -894,7 +894,7 @@ Lunes a viernes de 8:30 a 17:00 hrs.</div>
 <!--#/#--><!--#i5.i366.text.html:text/html-->
 <div id="i366">¡Vive increíbles aventuras en compañía de tu familia y amigos!</div>
 <!--#/#--><!--#i5.i58.image.html:image/html-->
-<img id="i58" src="https://i.imgur.com/ksCE7Cr.png"/>
+<img id="i58" src="https://i.imgur.com/HXnjazh.png"/>
 <!--#/#--><!--#i5.i360.image.html:image/html-->
 <img id="i360" src="https://i.imgur.com/viwKtXK.png"/>
 <!--#/#--><!--#i5.i368.image.html:image/html-->
