--- a/HEB 2/ZoomExp300x600.html
+++ b/HEB 2/ZoomExp300x600.html
@@ -186,8 +186,8 @@ a {text-decoration: none;}
  <div class="ism_text"> <span class=" ism_text_title" style="color:#000000; font-size:24px; text-decoration: none;"> La importancia de los aminoácidos para tu bebé.</span><br>
      <span class="ism_text ism_text_medium" style="color:#000000; font-size:16px;  text-decoration: none; "><p  style="text-align: justify; width: 92%; margin-left: 15px; margin-top: -15px;"> Los aminoácidos que forman las proteínas son vitales para que el cuerpo de tu bebé se desarrolle y realice sus funciones. </p>
                  
-                 <span class="ism_text_bold" style="color: blue;line-height:1em; font-size:16px; width:95%; text-align:left; margin-bottom:-35 px;">
-                        <p style=" line-height: 1em; margin-left: 15px; ">
+                 <span class="ism_text_bold" style="color: blue;line-height:1em; font-size:16px; width:95%; text-align:left;">
+                        <p style=" line-height: 1em; margin-left: 15px; margin-top: -12px;">
                           <u> <b>Leer más...</b></u> </p></span><br></span>
 
                  
