--- a/HEB 2/ZoomExp300x600.html
+++ b/HEB 2/ZoomExp300x600.html
@@ -184,11 +184,11 @@ a {text-decoration: none;}
 </div>
 
  <div class="ism_text"> <span class=" ism_text_title" style="color:#000000; font-size:24px; text-decoration: none;"> La importancia de los aminoácidos para tu bebé.</span><br>
-     <span class="ism_text ism_text_medium" style="color:#000000; font-size:16px;  text-decoration: none; "><p  style="text-align: justify; width: 92%; margin-left: 15px; margin-top: -15px;"> Los aminoácidos que forman las proteínas son vitales para que el cuerpo de tu bebé se desarrolle y realice sus funciones. </p>
+     <span class="ism_text ism_text_medium" style="color:#000000; font-size:16px;  text-decoration: none; "><p  style="text-align: justify; width: 92%; margin-left: 15px; margin-top: -15px;"> Los aminoácidos que forman las proteínas son vitales para que el cuerpo de tu bebé se desarrolle y realice sus funciones. </p></span>
                  
                  <span class="ism_text_bold" style="color: blue;line-height:1em; font-size:16px; width:95%; text-align:left;">
-                        <p style=" line-height: 1em; margin-left: 15px; margin-top: -7px;">
-                          <u> <b>Leer más...</b></u> </p></span><br></span>
+                        <p style=" line-height: 1em; margin-left: 15px; margin-top: -10px;">
+                          <u> <b>Leer más...</b></u> </p></span><br>
 
                  
                    </div>
