--- a/Office Depot tec/Cube.html
+++ b/Office Depot tec/Cube.html
@@ -770,7 +770,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i6.i274.image.css:image/base/css*/
 #i274 { opacity: 1; }
 /*#/#*//*#i274.i275.positioning.css:positioning/base/css.1*/
-#i274 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 300px; height: 160px;
+#i274 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 300px; height: 164px;
         -ms-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
         -webkit-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
         -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
@@ -862,7 +862,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i6.i196.text.html:text/html-->
 <div id="i196">¡En Office Depot!</div>
 <!--#/#--><!--#i6.i274.image.html:image/html-->
-<img id="i274" src="https://i.imgur.com/ShTtQux.jpg"/>
+<img id="i274" src="https://i.imgur.com/BRGAYXG.jpg"/>
 <!--#/#--><!--#i6.i266.image.html:image/html-->
 <img id="i266" src="https://i.imgur.com/qWWloQC.png"/>
 <!--#/#--><!--#i6.i282.text.html:text/html-->
