--- a/Claro Video/ZoomExp300x600.html
+++ b/Claro Video/ZoomExp300x600.html
@@ -181,7 +181,7 @@ a {text-decoration: none;}
   </ol>
 </div>
 
- <div class="ism_text"> <span class=" ism_text_title ism_text_bold" style="font-family:Trebuchet MS; color:black; font-size:20px;  text-decoration: none;"><b>Si tienes el Plan Telcel Max Sin Límite 3000, <br>¡ Ya tienes Claro Video gratis !</b></span><br>
+ <div class="ism_text"> <span class=" ism_text_title ism_text_bold" style="font-family:Trebuchet MS; color:black; font-size:18px;  text-decoration: none;"><b>Si tienes el Plan Telcel Max <br> Sin Límite 3000, <br>¡Ya tienes Claro Video gratis!</b></span><br>
 
             
                   <div style="font-family:Arial; color:#000000; font-size:8px;text-align:center;margin-top:-10px;"> </div>  
