--- a/Claro Video/Cube.html
+++ b/Claro Video/Cube.html
@@ -923,8 +923,8 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i6.i60.image.html:image/html-->
 <img id="i60" src="https://i.imgur.com/blmHvbd.jpg"/>
 <!--#/#--><!--#i6.i370.text.html:text/html-->
-<div id="i370">Y por $149 al mes,
- ¡También tienes HBO!</div>
+<div id="i370">Y por $139 al mes,
+ ¡También tienes FOX!</div>
 <!--#/#--><!--#i6.i362.image.html:image/html-->
 <img id="i362" src="https://i.imgur.com/atoxS88.png"/>
 <!--#/#--><!--#i6.i99.shape.html:shape/html-->
