--- a/Revlon/hover-text-big3.html
+++ b/Revlon/hover-text-big3.html
@@ -13,11 +13,12 @@
 </head>
     <style>
 
- body {
+    body {
     margin: 0;
     padding: 0;
     font-family: Source Sans Pro;
 }
+
 .imgBx:before{
     content: "";
     width: 298px;
@@ -109,14 +110,13 @@
             <div id="ghost"></div>
 
             <div class="imgBx">
-               <!--PRIMERA CARA (LANDING1)--> 
-                <iframe  src="fade-completo.html" width="300" height="600" frameborder="0" scrolling="no" align="center"></iframe>
+                
+              <iframe  src="fade-completo.html" width="300" height="600" frameborder="0" scrolling="no" align="center"></iframe>
             </div>
 
-            <!--SEGUNDA CARA (LANDING2)--> 
+
             <div class="details">
-                <div style="margin-left: -30px; margin-top:-60px; cursor: pointer;">
-                <a href="story-resize.html" target="_blank"  style="color: none; text-decoration: none;"> </a></div>
+                <iframe  src="story-resize.html" width="307" height="605" frameborder="0" scrolling="no" position="absolute" style="margin-left: -38px; margin-top: -68px;"></iframe>
 
              
 
