--- a/Revlon/fade-small.html
+++ b/Revlon/fade-small.html
@@ -71,15 +71,15 @@
         }
 
         .fadesmall .bg.cover-1 {
-            background-image: url(https://i.imgur.com/RobTMA4.png)
+            background-image: url(https://i.imgur.com/ca5HV7I.jpg)
         }
 
         .fadesmall .bg.cover-2 {
-            background-image: url(https://i.imgur.com/LjtZKcN.png)
+            background-image: url(https://i.imgur.com/rENi0SX.jpg)
         }
 
         .fadesmall .bg.cover-3 {
-            background-image: url(https://i.imgur.com/VUppQi6.png)
+            background-image: url(https://i.imgur.com/gJEONII.jpg)
         }
 
         .fadesmall .bzm_cover.bzm_pos_tl {
@@ -229,7 +229,7 @@
             
             height:35px;
             margin-top:5px; 
-            margin-left:250px;
+            margin-left:0px;
 
         }
 
@@ -237,7 +237,7 @@
 
         .fadesmall #botones-para-compartir {
             text-align:left;
-            margin-left: 12px;
+            margin-left: 5px;
             display:inline;
             float:left;
             margin-top:-35px;
@@ -283,24 +283,24 @@
                 <div class="bzm_cover bg cover-2 carousel-item1 item-2"></div>
                 <div class="bzm_cover bg cover-3 carousel-item1 item-3"></div>
             </div>
-            <div class="bzm_text"> <span class="bzm_text_title">Live this adventure full of adrenaline, follow your instincts! <br>  </span></div>
+             <div class="ism_text"> <span class=" ism_text_title ism_text_bold" style="font-family:Trebuchet MS; color:black; font-size:20px;  text-decoration: none;"><b>¡Seis sencillos pasos para un blush perfecto!</b></span><br>
 
             <!-- LOGO -->
-            <div class="logo"> <img id="logo" src="https://i.imgur.com/Wpai4EU.png"></div>
+            <div class="logo"> <div style="text-align:right ;margin-top: 10px; margin-left: -5px;"> <img id="logo" src="https://i.imgur.com/5DNZAJJ.png" style="height:25px; text-decoration: none;"></div>
 
 
                 <!--PARA QUITAR LOS BOTONES SOLO COMENTAR Y CERRAR-->
 
-                <div id="botones-para-compartir"> 
+                <div id="botones-para-compartir" style="margin-top: -28px">  
                    
                     <span> <a class="shared" href="https://www.facebook.com/sharer/sharer.php?u=https://www.facebook.com/REVLONColombia/"  target="block">    
-                        <img alt="compartir en facebook" class="facebooki" height="21" src="https://i.imgur.com/994hACC.png" title="compartir en facebook" width="21" /></a>
+                        <img alt="compartir en facebook" class="facebooki" height="25" src="https://i.imgur.com/tsDWqrH.png" title="compartir en facebook" width="25" /></a>
 
                             <a class="shared" href="whatsapp://send?text=Mira lo que he encontrado https://www.facebook.com/REVLONColombia/" target="block">
-                            <img alt="compartir en google+" class="googlei" height="21" src="https://i.imgur.com/UD7fmMP.png" title="compartir en google+" width="21" /></a>
+                            <img alt="compartir en whatsapp" class="googlei" height="25" src="https://i.imgur.com/JEY3LrC.png" title="compartir en google+" width="25" /></a>
 
                             <a class="shared" href="https://twitter.com/home?status=https://www.facebook.com/REVLONColombia/" target="block">
-                            <img alt="compartir en twitter" class="twitteri" height="21" src="https://i.imgur.com/hGeXVlx.png" title="compartir en twitter" width="21" /></a> </span></div>
+                            <img alt="compartir en twitter" class="twitteri" height="25" src="https://i.imgur.com/pRxJ1a5.png" title="compartir en twitter" width="25" /></a> </span></div>
             </div>
         </a>
     </div>
