--- a/Revlon/fade-completo.html
+++ b/Revlon/fade-completo.html
@@ -83,7 +83,7 @@
         }
 
         .bg.cover-1 {
-            background: url("https://i.imgur.com/edavxEu.png");
+            background: url("https://i.imgur.com/a0PYeE7.gif");
             background-size: cover;
             
 
@@ -103,7 +103,7 @@
         }
 
         .bg.cover-4 {
-            background: url("https://i.imgur.com/AKbSlXZ.jpg");
+            background: url("https://i.imgur.com/xEjDKpW.png");
             background-size: cover;
           
         }
