--- a/OPEL GRAND/fijo_300x250_Gif.html
+++ b/OPEL GRAND/fijo_300x250_Gif.html
@@ -201,7 +201,7 @@
         <a href="http://www.opel.es/tools/marketing/solicita-tu-oferta/grandland-x.html" target="_blank">
             <div id="te-wrapper" class="te-wrapper">
                 <div class="te-images"> 
-                <img src="https://i.imgur.com/Z3Cjo69.png" alt="" /> 
+                <img src="https://i.imgur.com/vcbO5Pq.gif" alt="" /> 
                  </div>
                 <div class="te-cover"> 
                     <img src="https://i.imgur.com/aUg8Hci.jpg" alt="" /> 
