--- a/OPEL GRAND/fijo_320x480.html
+++ b/OPEL GRAND/fijo_320x480.html
@@ -201,7 +201,7 @@
         <a href="http://www.opel.es/tools/marketing/solicita-tu-oferta/grandland-x.html" target="_blank">
             <div id="te-wrapper" class="te-wrapper">
                 <div class="te-images"> 
-                <img src="https://i.imgur.com/GmWvSwL.gif" alt="" /> 
+                <img src="https://i.imgur.com/V6AA67M.jpg" alt="" /> 
                  </div>
                 <div class="te-cover"> 
                     <img src="https://i.imgur.com/mwvb49m.jpg" alt="" /> 
