--- a/KFC video/VideoInteractivoMargenFranjas.html
+++ b/KFC video/VideoInteractivoMargenFranjas.html
@@ -43,14 +43,14 @@
                 },*/
                 
                 {
-                    start: 15,
+                    start: 13,
                     position: [
                         'left: 5px;',
                         'top: 85px;'
                     ],
-                    img_screen: 'https://i.imgur.com/OT0suT8.png',
+                    img_screen: 'https://i.imgur.com/A0BKeTm.png',
                     detail: {
-                        imageUrl: 'https://i.imgur.com/OT0suT8.png',
+                        imageUrl: 'https://i.imgur.com/A0BKeTm.png',
                         title: ' ',
                         href: 'https://www.facebook.com/pg/KFCMexico/posts/?ref=page_internal',
                         description: '¿Qué secreto serías capaz de compartirnos a cambio de nuestro sabor?'
