--- a/Office Depot Epson/FijoCompleto1.html
+++ b/Office Depot Epson/FijoCompleto1.html
@@ -12,7 +12,7 @@
     <script type="text/javascript">
         function adfOpenGlobalClickTAG() {
             var adfClickTAGName = 'clickTAG',
-                adfClickTAGUrl = 'https://www.officedepot.com.mx/officedepot/en/Categor%C3%ADa/Todas/Impresi%C3%B3n/Impresoras%2C-Multifuncionales-y-Esc%C3%A1neres/Impresoras-de-Tinta/IMPRESORA-EPSON-ECOTANK-M1120-%28TINTA%2C-NEGRO%29/p/87258';
+                adfClickTAGUrl = 'https://www.officedepot.com.mx/officedepot/en/Categor%C3%ADa/Todas/Impresi%C3%B3n/Impresoras,-Multifuncionales-y-Esc%C3%A1neres/Impresoras-de-Tinta/IMPRESORA-EPSON-ECOTANK-M1120-(TINTA,-NEGRO)/p/87258?utm_source=mosaicmedia_nativeads&utm_medium=Nativeads_epson_abril&utm_campaign=epson&utm_term=Paid&utm_content=OD';
 
             window.open(dhtml.getVar(adfClickTAGName, adfClickTAGUrl), dhtml.getVar('landingPageTarget', '_blank'));
         }
