--- a/Kipling/ZoomExp300x6002.html
+++ b/Kipling/ZoomExp300x6002.html
@@ -162,10 +162,10 @@ a {text-decoration: none;}
 <div class="ism-slider" data-transition_type="zoom" data-play_type="loop" data-interval="3000" data-image_fx="zoompan" data-buttons="false" data-radios="false" id="my-slider" style="width: 300px; height: 600px; border-radius: none;">
   <ol>
     <li>
-      <img src="https://i.imgur.com/bjI4v1Y.jpg">
+      <img src="https://i.imgur.com/FUbvxb5.png">
       
     <li>
-      <img src="https://i.imgur.com/P43u7P1.jpg">
+      <img src="https://i.imgur.com/BcTQrxi.png">
       
  
   </ol>
