--- a/Kipling/fade-completo.html
+++ b/Kipling/fade-completo.html
@@ -97,13 +97,13 @@
         }
 
         .bg.cover-3 {
-            background: url("https://i.imgur.com/vWy7ZRR.png");
+            background: url("https://i.imgur.com/fSy8yFo.png");
             background-size: cover;
           
         }
 
         .bg.cover-4 {
-            background: url("https://i.imgur.com/EM72Wg2.jpg");
+            background: url("https://i.imgur.com/vWy7ZRR.png");
             background-size: cover;
           
         }
