--- a/Kipling/hover-text-big3.html
+++ b/Kipling/hover-text-big3.html
@@ -110,7 +110,7 @@
 
             <div class="imgBx">
                 
-                 <iframe  src="fade-completo.html" width="300" height="600" frameborder="0" scrolling="no" align="center"></iframe>
+                 <iframe  src="slider-extendido2.html" width="300" height="600" frameborder="0" scrolling="no" align="center"></iframe>
             </div>
 
 
