--- a/Kipling/hover-text-big2.html
+++ b/Kipling/hover-text-big2.html
@@ -117,7 +117,7 @@
             <div class="details">
                 <div style="margin-left: -30px; margin-top:-60px; cursor: pointer;">
                 <a href="https://goo.gl/maps/DD46F1dFiuM2" target="_blank"  style="color: none; text-decoration: none;">
-                <img src="https://i.imgur.com/zX3tEii.png"> </a></div>
+                <img src="https://i.imgur.com/xCKg5Nf.png"> </a></div>
 
              
 
