--- a/Kipling/hover-text-big3.html
+++ b/Kipling/hover-text-big3.html
@@ -116,7 +116,7 @@
 
             <div class="details">
                 <div style="margin-left: -30px; margin-top:-60px; cursor: pointer;">
-                <a href="https://goo.gl/maps/zub4BEmM1m92" target="_blank"  style="color: none; text-decoration: none;"><img src="https://i.imgur.com/cYJMc4f.png"> </a></div>
+                <a href="https://goo.gl/maps/zub4BEmM1m92" target="_blank"  style="color: none; text-decoration: none;"><img src="https://i.imgur.com/LDK7bZ4.png"> </a></div>
 
              
 
