--- a/Kipling/slider-320x480_completo2.html
+++ b/Kipling/slider-320x480_completo2.html
@@ -9,7 +9,7 @@
     <script type="text/javascript">
         function adfOpenGlobalClickTAG() {
             var adfClickTAGName = 'clickTAG',
-                adfClickTAGUrl = 'https://kiplingmexico.com/';
+                adfClickTAGUrl = 'https://goo.gl/maps/zub4BEmM1m92';
 
             window.open(dhtml.getVar(adfClickTAGName, adfClickTAGUrl), dhtml.getVar('landingPageTarget', '_blank'));
         }
