--- a/Kipling/Cube3.html
+++ b/Kipling/Cube3.html
@@ -764,7 +764,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     <!--#i5.i30.shape.html:shape/html-->
 <div id="i30"></div>
 <!--#/#--><!--#i5.i58.image.html:image/html-->
-<img id="i58" src="https://i.imgur.com/1QY76AJ.png"/>
+<img id="i58" src="https://i.imgur.com/x7QdX2v.png"/>
 <!--#/#--><!--#i5.i236.image.html:image/html-->
 <img id="i236" src="https://i.imgur.com/TgCtoo7.png"/>
 <!--#/#--><!--#i5.i95.shape.html:shape/html-->
