--- a/HYUNDAI I30/ZoomExp300x600.html
+++ b/HYUNDAI I30/ZoomExp300x600.html
@@ -172,7 +172,7 @@ a {text-decoration: none;}
 </div>
 
  <div class="ism_text"> <span class=" ism_text_title ism_text_bold" style="font-family:Arial; color:#000000; font-size:22px;  text-decoration: none;"> Nuevo i30 Fastback N </span><br>
-     <span class=" ism_text ism_text_medium" style="font-family:Arial; color:#000000; font-size:14px;  text-decoration: none; "><p  style="text-align: justify; width: 92%; margin-left: 10px; margin-top: -10px;"> Con una potencia de hasta 275 CV y gran rendimiento en curvas. Pura adrenalina con un toque de elegancia, Desde 33.250€.</p></span><br>
+     <span class=" ism_text ism_text_medium" style="font-family:Arial; color:#000000; font-size:14px;  text-decoration: none; "><p  style="text-align: justify; width: 92%; margin-left: 10px; margin-top: -10px;"> Con una potencia de hasta 275 CV y gran rendimiento en curvas. Pura adrenalina con un toque de elegancia. Desde 33.250€.</p></span><br>
 
                  
                    </div>
