--- a/HYUNDAI I30/ZoomExp300x600.html
+++ b/HYUNDAI I30/ZoomExp300x600.html
@@ -154,7 +154,7 @@ a {text-decoration: none;}
       <img src="https://i.imgur.com/l1VAPIf.jpg">
       
     <li>
-      <img src="https://i.imgur.com/Mn1OfSm.jpg">
+      <img src="https://i.imgur.com/BlmvQpC.jpg">
       
     <li>
       <img src="https://i.imgur.com/DemylN6.jpg">
