--- a/Huawei2/Venetian.html
+++ b/Huawei2/Venetian.html
@@ -2226,11 +2226,11 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i2.slice.html:slice/html-->
 <div id="i2" class="adf-SliceBox">
     <!--#i2.i4.slice-image.html:slice-image/html-->
-<dataimg id="i4" src="https://i.imgur.com/eqmUCe3.png"></dataimg>
+<dataimg id="i4" src="https://i.imgur.com/oTAy2d2.png"></dataimg>
 <!--#/#--><!--#i2.i5.slice-image.html:slice-image/html-->
-<dataimg id="i5" src="https://i.imgur.com/uRkiIbV.png"></dataimg>
+<dataimg id="i5" src="https://i.imgur.com/eJU1TE8.png"></dataimg>
 <!--#/#--><!--#i2.i6.slice-image.html:slice-image/html-->
-<dataimg id="i6" src="https://i.imgur.com/3MmnKgr.png"></dataimg>
+<dataimg id="i6" src="https://i.imgur.com/3e7ZSzl.png"></dataimg>
 <!--#/#-->
 </div>
 <!--#/#--><!--#i42.shape.html:shape/html-->
