--- a/Huawei2/STORY HOVER XPAND/hover-text-big2.html
+++ b/Huawei2/STORY HOVER XPAND/hover-text-big2.html
@@ -113,7 +113,7 @@
             <div class="imgBx">
                 <div style="margin-left: 
                 0px; margin-top:0px; cursor: pointer;">
-                <img src="https://i.imgur.com/7WCp4Uw.gif"> </a></div>
+                <img src="https://i.imgur.com/fysPko2.gif"> </a></div>
                 
              
 
