--- a/Huawei2/STORY HOVER XPAND/story-resize.html
+++ b/Huawei2/STORY HOVER XPAND/story-resize.html
@@ -398,7 +398,7 @@
                       <a class="shared" href="https://plus.google.com/share?url=https://consumer.huawei.com/mx/phones/" target="block" >
                                 <img alt="compartir en google+" class="googlei" src="http://3.bp.blogspot.com/-Ioy5JWv_nwk/Uh1HlxE8urI/AAAAAAAAAhc/q_uUabDAhsU/s1600/Google%252B%2Balt.png" title="compartir en google+" /></a>
                                 
-                                                <img class="final"  src="https://i.imgur.com/iInBeXP.png"  style="height: 35px; margin-right: -15px; margin-bottom: 5px; float: right;">
+                                                <img class="final"  src="https://i.imgur.com/UNRBsqo.png"  style="height: 35px; margin-right: -15px; margin-bottom: 5px; float: right;">
 
                     </span>
                 </div> 
