--- a/Deichmann/fade-small.html
+++ b/Deichmann/fade-small.html
@@ -284,7 +284,7 @@
              Coleção #Spreadthelook
             </span>
             <br> 
-            <span class="bzm_text_light bzm_text_small" style="color:#000;line-height:1;font-size:14px;text-align:center;"> As tendências das mãos das influencers para este verão 19,</span></div>
+            <span class="bzm_text_light bzm_text_small" style="color:#000;line-height:1;font-size:14px;text-align:center;"> As tendências das mãos das influencers para este verão 19.</span></div>
             
             <div style="bottom:0px;height:40px;text-align:right ;margin-top:-5px; margin-right: 5px;"> <img src="https://i.imgur.com/ON4NgrF.png" style="height:35px;margin-top:-3px;">
                
