--- a/VW México/VideoInteractivoMargenFranjas.html
+++ b/VW México/VideoInteractivoMargenFranjas.html
@@ -23,8 +23,8 @@
                         imageUrl: 'https://i.imgur.com/hIwbo0H.png',
                         title: ' ',
                         href: 'https://www.vw.com.mx/es/autos/beetle.html',
-                        description: 'Beetle Final Edition.',
-                        description2: 'Vive la leyenda.'
+                        description: 'Beetle Final Edition. Vive la leyenda.',
+                        description2: ''
                     }
                 },
                 
