--- a/HEB BEBES/FadeBig.html
+++ b/HEB BEBES/FadeBig.html
@@ -40,11 +40,13 @@
         .tgx_wrapper.size_300x250 {
             width: 298px;
             height: 480px;
+            background-color: #b7e9fe
         }
 
         .tgx_wrapper.size_320x480 {
             width: 298px;
             height: 598px;
+            background-color: #b7e9fe
         }
 
         .tgx_wrapper.size_320x50 {
@@ -96,11 +98,10 @@
 
         .cta {
             position: absolute;
-            bottom: 140px;
+            bottom: 130px;
             width: 145px;
             line-height: 1.3em;
             z-index: 10;
-            margin-top: 20px;
             margin-left: 70px;
             background-color: #9785bb;
             padding: 7px;
@@ -380,7 +381,7 @@
    
     <div class="tgx_wrapper carousel-wrapper size_320x480" id="cta" onclick="openUrl();">
 
-        <div class="cta"><span class="bzm_text_title bzm_text_bold" style="font-size:115%; color: white;"><b>Conócelos</b></span></div>
+        <div class="cta"><span class="bzm_text_title bzm_text_bold" style="font-size:115%; color: white; font-family: Lehigh-Personal-SemiBold;"><b>Conócelos</b></span></div>
        
         <div class="tgx_cover bg cover-1 carousel-item item-1">
             <div class="tgx_logo"><span class="tgx_text_bold tgx_text_small"></span></div>
@@ -399,7 +400,7 @@
   
 
 
-                <div id="botones-para-compartir" style="display:inline;float:left;margin-left:4px; margin-top:10px;">
+                <div id="botones-para-compartir" style="display:inline;float:left;margin-left:4px; margin-top:15px;">
                     <span>  
                         <a class="shared" href="https://www.facebook.com/sharer/sharer.php?u=https://hebbabies.com.mx/crecer-sano/ejercicios-de-estimulacion-temprana-para-bebes/"  target="block">    
                         <img alt="compartir en facebook" class="facebooki" height="25" src="https://i.imgur.com/Uqxafdx.png" title="compartir en facebook" width="25" /></a>
