--- a/HEB BEBES/FadeBig.html
+++ b/HEB BEBES/FadeBig.html
@@ -35,18 +35,20 @@
             overflow: hidden;
             border: 1px solid #c5c5c5;
             cursor: pointer;
+
         }
 
         .tgx_wrapper.size_300x250 {
             width: 298px;
             height: 480px;
-            background-color: #b7e9fe
+            
         }
 
         .tgx_wrapper.size_320x480 {
             width: 298px;
             height: 598px;
-            background-color: #b7e9fe
+            background-image: url("https://i.imgur.com/sZdr38D.jpg")
+            
         }
 
         .tgx_wrapper.size_320x50 {
