--- a/HEB BEBES/ZoomExp300x600.html
+++ b/HEB BEBES/ZoomExp300x600.html
@@ -58,7 +58,7 @@ a {text-decoration: none;}
         .zoom .wrapper.size_300x250 {
             width: 298px;
             height: 598px;
-            background-color: #b7e9fe
+            background-image: url("https://i.imgur.com/sZdr38D.jpg")
         }
 
         .cta {
@@ -194,7 +194,7 @@ a {text-decoration: none;}
 </div>
 
  <div class="ism_text"> <span class=" ism_text_title" style="color:#000000; font-size:24px; text-decoration: none;"> La importancia de los aminoácidos para tu bebé.</span><br>
-     <span class="ism_text ism_text_medium" style="color:#000000; font-size:16px;  text-decoration: none; "><p  style="text-align: justify; width: 92%; margin-left: 15px; margin-top: -15px;"> Los aminoácidos que forman las proteínas son vitales para que el cuerpo de tu bebé...  </p></span>
+     <span class="ism_text ism_text_medium" style="color:#000000; font-size:16px;  text-decoration: none; "><p  style="text-align: justify; width: 92%; margin-left: 15px; margin-top: -15px;"> <strong>Los aminoácidos que forman las proteínas son vitales para que el cuerpo de tu bebé...</strong>  </p></span>
                  
                  <span class="ism_text_bold" style="color: blue;line-height:1em; font-size:16px; width:95%; text-align:left;">
                         <p style=" line-height: 1em; margin-left: 15px; margin-top: -3px;">
